--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -4,6 +4,41 @@ class: page-team
 ---
 
 {{ content }}
+  <ul class="usa-accordion filter">
+    <li>
+      <button class="usa-accordion-button"
+        aria-expanded="true" aria-controls="filter">
+        Filter the team listing
+        <p>By year, domain, agency collaborator, and skill/specialty</p>
+      </button>
+      <div id="filter" class="usa-accordion-content">
+        <div class="filter-section">
+          <p class="filter-category">Year</p>
+          <button>All</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+        </div>
+        <div class="filter-section">
+          <p class="filter-category">Domain</p>
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
+        <div class="filter-section">
+          <p class="filter-category">Agency collaborator</p>
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
+        <div class="filter-section">
+          <p class="filter-category">Skill/Specialty</p>
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
+      </div>
+    </li>
+  </ul>
 
 <section class="usa-section usa-graphic_list">
 {% for team in site.team %}
