--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -415,8 +415,6 @@ body:not(.page-home) {
 .page-team {
   .usa-graphic_list {
     .usa-media_block {
-      clip-path: circle(62px at center);
-      height: 124px;
       margin-bottom: 6rem;
 
       &:nth-child(2n) {
@@ -431,6 +429,11 @@ body:not(.page-home) {
     h3 {
       margin-top: 0;
     }
+  }
+
+  .usa-media_block-img {
+    clip-path: circle(62px at center);
+    height: 124px;
   }
 }
 
