Style filter on team page

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -9,33 +9,51 @@ class: page-team
   <li>
     <button class="usa-accordion-button"
       aria-expanded="true" aria-controls="filter">
-      Filter the team listing
-      <p>By year, domain, agency collaborator, and skill/specialty</p>
+      <p class="filter-button-title">Filter the team listing</p>
+      <p class="filter-button-message">By year, domain, agency collaborator, and skill/specialty</p>
     </button>
     <div id="filter" class="usa-accordion-content">
       <div class="filter-section">
         <p class="filter-category">Year</p>
-        <button>All</button>
-        <button class="usa-button-outline">2000</button>
-        <button class="usa-button-outline">2001</button>
+        <div class="filter-selection">
+          <button>All</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+          <button class="usa-button-outline">2000</button>
+          <button class="usa-button-outline">2001</button>
+        </div>
       </div>
       <div class="filter-section">
         <p class="filter-category">Domain</p>
-        <button>All</button>
-        <button class="usa-button-outline">All</button>
-        <button class="usa-button-outline">All</button>
+        <div class="filter-selection">
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
       </div>
       <div class="filter-section">
         <p class="filter-category">Agency collaborator</p>
-        <button>All</button>
-        <button class="usa-button-outline">All</button>
-        <button class="usa-button-outline">All</button>
+        <div class="filter-selection">
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
       </div>
       <div class="filter-section">
         <p class="filter-category">Skill/Specialty</p>
-        <button>All</button>
-        <button class="usa-button-outline">All</button>
-        <button class="usa-button-outline">All</button>
+        <div class="filter-selection">
+          <button>All</button>
+          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline">All</button>
+        </div>
       </div>
     </div>
   </li>
