--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,6 +3,7 @@ $nav-width: 892px;
 $base-line-height: 1.7em;
 
 $base-font-size: 1.8rem;
+$h1-font-size: 4.4rem;
 $h4-font-size: 1.6rem;
 
 $helvetica: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
