Update filter text to remove domain

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -10,7 +10,7 @@ class: page-team
     <button class="usa-accordion-button"
       aria-expanded="true" aria-controls="filter">
       <p class="filter-button-title">Filter the team listing</p>
-      <p class="filter-button-message">By year, domain, agency collaborator, and skill/specialty</p>
+      <p class="filter-button-message">By year, agency collaborator, and skill/specialty</p>
     </button>
     <div id="filter" class="usa-accordion-content">
       <div class="filter-section">
