Update filter terms

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -15,36 +15,36 @@ class: page-team
     <div id="filter" class="usa-accordion-content">
       <div class="filter-section">
         <p class="filter-category">Year</p>
-        <div class="filter-selection">
-          <button>All</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
-          <button class="usa-button-outline">2000</button>
-          <button class="usa-button-outline">2001</button>
+        <div class="filter-selection" data-filter-group="year">
+          <button data-filter>All</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
+          <button class="usa-button-outline" data-filter="2000">2000</button>
+          <button class="usa-button-outline" data-filter="2000">2001</button>
         </div>
       </div>
       <div class="filter-section">
         <p class="filter-category">Agency collaborator</p>
-        <div class="filter-selection">
+        <div class="filter-selection" data-filter-group="agency">
           <button>All</button>
-          <button class="usa-button-outline">All</button>
-          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline" data-filter>All</button>
+          <button class="usa-button-outline" data-filter="test">All</button>
         </div>
       </div>
       <div class="filter-section">
         <p class="filter-category">Skill/Specialty</p>
-        <div class="filter-selection">
+        <div class="filter-selection" data-filter-group="skill">
           <button>All</button>
-          <button class="usa-button-outline">All</button>
-          <button class="usa-button-outline">All</button>
+          <button class="usa-button-outline" data-filter>All</button>
+          <button class="usa-button-outline" data-filter="test">All</button>
         </div>
       </div>
     </div>
