--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,8 +3,11 @@ $nav-width: 892px;
 $base-line-height: 1.7em;
 
 $base-font-size: 1.8rem;
-$h1-font-size: 4.4rem;
+$h1-font-size: 4.2rem;
+$h3-font-size: 2.2rem;
 $h4-font-size: 1.6rem;
+
+$font-heavy: 900;
 
 $helvetica: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 $font-sans: "Lato", $helvetica; // note: should this be $font-body?
