--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,7 @@
 <div class="project-container">
 {% for project in site.projects %}
   {% unless project.featured %}
-    <a class="project--card usa-width-one-third" href="{{ project.url | prepend: site.baseurl }}" role="article">
+    <a class="project--card usa-width-one-third" href="{{ project.url | downcase | prepend: site.baseurl }}" role="article">
       <div class="project--image" style="background-image: url({{ project.image | prepend: site.baseurl }});"></div>
       <div class="project--banner">
         <h3 class="project--description">
