--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -9,6 +9,14 @@ html {
   font-family: $font-body;
 }
 
+body {
+  font-size: 1.5rem;
+
+  @include media($medium-screen) {
+    font-size: $base-font-size;
+  }
+}
+
 h1,
 h2,
 h3,
