--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -4,57 +4,15 @@ class: page-team
 filters:
   - key: year
     title: Year
+    multiple: true
   - key: title
     title: Title
+scripts:
+  - src: /assets/js/filters.js
 ---
 
 {{ content }}
-
-<ul class="usa-accordion filter">
-  <li>
-    <button class="usa-accordion-button"
-      aria-expanded="true" aria-controls="filter">
-      <p class="filter-button-title">Filter the team listing</p>
-      <p class="filter-button-message">By year, agency collaborator, and skill/specialty</p>
-    </button>
-    <div id="filter" class="usa-accordion-content">
-      {% for filter in layout.filters %}
-      <div class="filter-section">
-        <fieldset class="usa-fieldset-inputs">
-          <legend>{{ filter.title }}</legend>
-          <ul class="usa-unstyled-list">
-            <li>
-              <input id="{{ filter.key }}-all" type="radio" checked name="{{ filter.key }}">
-              <label for="{{ filter.key }}-all">All</label>
-            </li>
-            {% assign values = '' | split: '' %}
-            {% for member in site.team %}
-              {% for value in member[filter.key] %}
-              {% assign values = values | push: value %}
-              {% endfor %}
-            {% endfor %}
-            {% assign values = values | uniq | sort %}
-            {% for value in values %}
-            <li>
-              <input id="{{ filter.key }}-{{ value }}" type="radio" name="{{ filter.key }}" value='{{ value | jsonify }}'>
-              <label for="{{ filter.key }}-{{ value }}">{{ value }}</label>
-            </li>
-            {% endfor %}
-          </ul>
-        </fieldset>
-      </div>
-      {% endfor %}
-      <div class="filter-section">
-        <p class="filter-category">Title</p>
-        <div class="filter-selection" data-filter-group="agency">
-          <button>All</button>
-          <button class="usa-button-outline" data-filter>All</button>
-          <button class="usa-button-outline" data-filter="test">All</button>
-        </div>
-      </div>
-    </div>
-  </li>
-</ul>
+{% include filter.html items=site.team filters=layout.filters %}
 
 <section class="usa-section usa-graphic_list">
 {% for team in site.team %}
@@ -70,31 +28,3 @@ filters:
   </div>
 {% endfor %}
 </div>
-
-<script>
-var form = document.querySelector('#filter');
-var filterables = document.querySelectorAll('.js-filterable');
-
-var update = function() {
-  [].forEach.call(filterables, function(el) {
-    el.hidden = false;
-  });
-
-  var inputs = document.querySelectorAll('#filter input[value]:checked');
-  [].forEach.call(inputs, function(input) {
-    var key = input.name;
-    var val = JSON.parse(input.value || '""');
-    var selector = '.js-filterable[data-' + key + ']:not([hidden])';
-    var members = document.querySelectorAll(selector);
-    [].forEach.call(members, function(member) {
-      var value = JSON.parse(member.getAttribute('data-' + key) || 'null');
-      member.hidden = Array.isArray(value)
-        ? value.indexOf(val) === -1
-        : (value !== val);
-    });
-  });
-};
-
-form.addEventListener('change', update);
-</script>
-
