Change filter to closed by default

--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -1,7 +1,7 @@
 <ul class="usa-accordion filter">
   <li>
     <button class="usa-accordion-button"
-      aria-expanded="true" aria-controls="filter">
+      aria-expanded="false" aria-controls="filter">
       <p class="filter-button-title">{{ page.filter_button_title }}</p>
       <p class="filter-button-message">{{ page.filter_button_message }}</p>
     </button>
