Add agency to team

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -6,7 +6,7 @@ filters:
   - key: domain
     title: Domain
   - key: agency
-    title: Agency
+    title: Agency collaborator
   - key: impact
     title: Impact
 scripts:
