--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -7,6 +7,9 @@ filters:
     multiple: true
   - key: title
     title: Title
+  - key: agency
+    title: Agency collaborator
+    multiple: true
 scripts:
   - src: /assets/js/filters.js
 ---
