--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -1,7 +1,7 @@
 <ul class="usa-accordion filter">
   <li>
     <button class="usa-accordion-button"
-      aria-expanded="false" aria-controls="filter">
+      aria-expanded="true" aria-controls="filter">
       <p class="filter-button-title">{{ page.filter_button_title }}</p>
       <p class="filter-button-message">{{ page.filter_button_message }}</p>
     </button>
@@ -9,8 +9,8 @@
       {% for filter in include.filters %}
       <div class="filter-section">
         <fieldset class="usa-fieldset-inputs">
-          <legend class="filter-category">{{ filter.title }}</legend>
-          <ul class="usa-unstyled-list">
+          <legend class="filter-category usa-width-one-fourth">{{ filter.title }}</legend>
+          <ul class="usa-unstyled-list usa-width-three-fourths">
             <li>
               <input id="{{ filter.key }}-all" type="radio" checked name="{{ filter.key }}">
               <label class="usa-button usa-button-outline" for="{{ filter.key }}-all">All</label>
