--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -8,7 +8,7 @@ filters:
   - key: agency
     title: Agency collaborator
   - key: impact
-    title: Impact
+    title: Government impact
 scripts:
   - src: /assets/js/filters.js
 ---
