--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -580,6 +580,7 @@ body:not(.page-home) {
 .filter-category {
   font-size: $base-font-size;
   font-weight: $font-bold;
+  margin-bottom: 7px;
   margin-top: 7px;
 }
 
