Style photo credit

--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -3,7 +3,7 @@ layout: page
 class: page-project-single
 ---
 
-<p class="billboard-message iproject-tagline">{{ page.summary }}</p>
+<p class="billboard-message">{{ page.summary }}</p>
 <div class="usa-width-three-fourths">
   {{ content }}
 </div>
