--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,5 +9,10 @@ layout: base
   {% elsif page.image %}
     <div class="page--banner" style="background-image: url({{ page.image | prepend: site.baseurl }});"></div>
   {% endif %}
+  {% if page.image-credit %}
+    <p class="caption">
+      <a href="{{page.image-credit}}" target="_blank">Photo credit</a> (Creative Commons)
+    </p>
+  {% endif %}
   {{ content }}
 </div>
